fix(styles): change tailwind config to js for correct setup in globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer utilities {
-    .p-safe {
-        padding: env(safe-area-inset);
-    }
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 body {
     @apply min-h-screen select-none bg-zinc-50 text-zinc-900 antialiased p-safe dark:bg-zinc-900 dark:text-zinc-50;
