--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,12 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 body {
-    @apply min-h-screen select-none bg-zinc-900 text-zinc-50 antialiased p-safe dark:bg-zinc-900 dark:text-zinc-50;
+	@apply min-h-screen select-none bg-zinc-900 text-zinc-50 antialiased p-safe dark:bg-zinc-900 dark:text-zinc-50;
 
-    /* PWA enhancements */
-    -webkit-overflow-scrolling: touch;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-touch-callout: none;
+	/* PWA enhancements */
+	-webkit-overflow-scrolling: touch;
+	-webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
 }
