chore(styles): update primary bg light color to #f6f9fb from #ffffff

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@ body {
 	--color-primary-text-light: #1a202c;
 	--color-secondary-text-light: #718096;
 	--color-warning-text-light: #e53e3e;
-	--color-primary-bg-light: #ffffff;
+	--color-primary-bg-light: #f6f9fb;
 	--color-secondary-bg-light: #edf2f7;
 	--color-warning-bg-light: #fefcbf;
 
